--- a/packages/SystemUI/res/values/aicp_colors.xml
+++ b/packages/SystemUI/res/values/aicp_colors.xml
@@ -17,13 +17,13 @@
 <resources>
 
     <!-- Volume panel border coler -->
-    <color name="volume_panel_border_color">#ff2962ff</color><!-- blue A700 -->
+    <color name="volume_panel_border_color">#008B45</color><!-- blue A700 -->
 
-    <color name="system_primary_color">@*android:color/material_pixel_blue_dark</color>
-    <color name="system_secondary_color">@*android:color/material_pixel_blue_light</color>
-    <color name="system_accent_color">@*android:color/material_pixel_blue_bright</color>
+    <color name="system_primary_color">#008B45</color>
+    <color name="system_secondary_color">#008B45</color>
+    <color name="system_accent_color">#008B45</color>
 
     <!-- Custom Carrier Label -->
-    <color name="status_bar_carrier_color">#FFFFFFFF</color>
+    <color name="status_bar_carrier_color">#008B45</color>
 
 </resources>
